--- a/README
+++ b/README
@@ -49,3 +49,7 @@ b2b.inputString(prompt, colorfg (optional), colorbg (optional))
 Returns user input.
 - prompt: string. Is displayed above the input block.
 - colorfg, colorbg: color. defaults to b&w
+
+b2b.fline(x1, y1, x2, y2, color (optional))
+- x1 y1 x2 y2: integer. measurement in pixels.
+- color: color. defaults to b&w
